tests/test_arithmetic/bad/output/division_by_zero.catala_en.Dec.Interpret
[ERROR] division by zero at runtime

The division operator:
  --> tests/test_arithmetic/bad/division_by_zero.catala_en
   | 
20 |   definition i equals 1. /. 0.
   |                       ^^^^^^^^
   + `Division_by_zero` exception management
   +-+ with decimals

The null denominator:
  --> tests/test_arithmetic/bad/division_by_zero.catala_en
   | 
20 |   definition i equals 1. /. 0.
   |                             ^^
   + `Division_by_zero` exception management
   +-+ with decimals
